# playground

./: README.md
apps/: README.md
apps/todo-actix/: .gitignore  Cargo.toml  README.md
apps/todo-actix/.cargo/: config.toml
apps/todo-actix/db/: setup.sql  todos.db
apps/todo-actix/migrations/: 20240530144215_create-todos-table.sql
apps/todo-actix/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  test.rs  todo.rs
apps/todo-actix/src/test/: actix.rs  mod.rs  utils.rs
apps/todo-actix/src/test/fixtures/: todos.sql
apps/todo-rocket/: Cargo.toml
go/: fibonacci_closure.go  slices_alloc.go  sqrt.go  word_count.go
go/advent2020/: day01.go  day02.go  day03.go  go.mod
hello_cargo/: Cargo.toml
minigrep/: Cargo.toml
minigrep/src/: config.rs  lib.rs  main.rs
rust/fibonacci/: Cargo.toml
rust/fibonacci/src/: main.rs
rust/minigrep/src/: tests.rs
rust/rustlings/exercises/: quiz1.rs  quiz2.rs  quiz3.rs  quiz4.rs
rust/rustlings/exercises/clippy/: clippy1.rs
rust/rustlings/exercises/enums/: enums2.rs
rust/rustlings/exercises/error_handling/: errors2.rs  errorsn.rs
rust/rustlings/exercises/functions/: functions2.rs  functions5.rs
rust/rustlings/exercises/generics/: generics3.rs
rust/rustlings/exercises/if/: if2.rs
rust/rustlings/exercises/move_semantics/: move_semantics3.rs
rust/rustlings/exercises/standard_library_types/: arc1.rs  iterators3.rs  iterators4.rs
rust/rustlings/exercises/structs/: structs1.rs  structs3.rs
rust/rustlings/exercises/tests/: tests2.rs  tests3.rs
rust/rustlings/exercises/threads/: threads1.rs
rust/rustlings/exercises/traits/: traits1.rs
rust/simulator/src/: main.rs
rust/temperature_converter/: Cargo.toml
rust/tokio_tutorial/mini-tokio/: Cargo.toml
rust/tokio_tutorial/mini-tokio/src/: delay.rs  (+4 more)
rust/web_server/: Cargo.toml
rust/web_server/src/: main.rs
rustlings/exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs  using_as.rs
rustlings/exercises/enums/: enums3.rs
rustlings/exercises/error_handling/: errors1.rs  errors3.rs  result1.rs
rustlings/exercises/functions/: functions1.rs  functions3.rs  functions4.rs
rustlings/exercises/generics/: generics1.rs
rustlings/exercises/if/: if1.rs
rustlings/exercises/macros/: macros4.rs
rustlings/exercises/modules/: modules1.rs
rustlings/exercises/move_semantics/: move_semantics2.rs
rustlings/exercises/option/: option1.rs  option2.rs
rustlings/exercises/primitive_types/: primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types5.rs  primitive_types6.rs
rustlings/exercises/standard_library_types/: box1.rs  iterators2.rs
rustlings/exercises/strings/: strings2.rs
rustlings/exercises/structs/: structs2.rs
rustlings/exercises/variables/: variables2.rs  variables4.rs  variables5.rs
temperature_converter/src/: main.rs
web_server/res/: 404.html  index.html
web_server/src/: lib.rs  main.rs
(+5 files in other folders)
