[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", default-features = false, features = ["serde_derive"] }
sqlx = { version = "0.7", default-features = false, features = [
    "macros",
    "sqlite",
] }

[profile.release]
lto = true
debug = false
opt-level = 3
