[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.6", default-features = false, features = ["macros"] }
env_logger = { version = "0.11", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "serde_derive",
] }
sqlx = { version = "0.7", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }

[profile.release]
lto = true
debug = false
opt-level = 3
